2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/parser.py (Parser.selectQueryExpr): 
	* expression/nodes.py (MapResult): 
	Replace Map and NameColumns by a single MapResult node that does
	column mapping and naming.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.g (selectQuery, graphPattern, pathExprList)
	(pathExpr, pathExprTail): Use the context stack.

	* serql/parser.py (Parser.__slots__, Parser.__init__) 
	(Parser.pushContext, Parser.popContext, Parser.currentContext):
	In preparation for nested SELECT queries, add a stack of
	SelectContext objects.
	(Parser.exprFromPattern, Parser.graphPatternExpr) 
	(Parser.selectQueryExpr, Parser.exprFromTriple): Use the new
	context stack.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* antlr.py: Include antlr.py in the source tree.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.g (query):
	* serql/parser.py (Parser.__init__): Initialize local prefix in
	Parser constructor.

	* serql/environment.py (ParseEnvironment.__slots__) 
	(ParseEnvironment.__init__, ParseEnvironment.setPrefixes) 
	(ParseEnvironment.getPrefixes, ParseEnvironment.parse): Create
	new parser and lexer objects every time a query is parsed.

2006-01-23  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/serql.g (uri, query, namespaceList, namespace)
	(prefixName): Parse the USING NAMESPACE clause.

	* serql/parser.py (QName): New class for qualified name nodes.
	(Parser.__slots__, Parser.__init__, Parser.initLocalPrefixes) 
	(Parser.createLocalPrefix, Parser.getPrefixUri) 
	(Parser.resolveQName, Parser.expandQNames.operation) 
	(Parser.checkPrefix): Add support for query-defined namespace
	prefixes.

2006-01-20  Martin Soto  <martinsoto@users.sourceforge.net>

	* serql/environment.py (ParseEnvironment.parse): Convert ANTLR
	exceptions into serql module exceptions.

	* serql/error.py (Error, PositionError, SyntaxError) 